btsync-gui (0.7.3-1) unstable; urgency=low

  * Added function for editing the .SyncIgnore file (Closes #98)
  * "Open Manual" renamed to the more correct "Open Original Manual"
  * Fixed occasional malfunction in "Open Web UI" (Closes #100)

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 14 Mar 2014 17:37:20 +0100

btsync-gui (0.7.2-1) unstable; urgency=low

  * Added iconic display of peer connection status
  * Updated documentation and man pages
  * Probably fixed icon scaling issue on high definition displays
 
 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 14 Mar 2014 17:36:20 +0100

btsync-gui (0.7.1-1) unstable; urgency=low

  * Fixed broken build on Launchpad (Closes #93)
  * Fixed crash on --savedefaults (Closes #97)
  * Setting --webui is not also deleted on --cleardefaults

 -- Leo Moll <leo.moll@yeasoft.com>  Fri, 14 Mar 2014 00:11:18 +0100

btsync-gui (0.7-1) unstable; urgency=low

  * Added support for suspend and resume (Closes #82)
  * Implemented shutdown handlers and provided more consistent
    agent startup behaviour (Closes #78)
  * Fixed security issue with agent configuration file (Closes #81)
  * Windows size is now persistent (Closes #77)
  * Added the possibility to make the web UI of the local agent
    accessible and to store default settings (Closes #83)
  * Implemented random per session credentials (Closes #67)
  * Fixed broken open SyncArchive and Folder when folder name
    contains spaces (Closes #85)
  * Added specific icons for paused and connecting state
  * Cyclic status updates are now dynamically adapted to the
    system and conncetion performance avoiding API flooding
    (Closes #88)
  * Finalized remote support (Closes #79)
    - Added connection information to status and window
    - Disabled browse button on remote connections
    - Disabled local file system checks on remote connections
    - Disabled folder open functions on remote connections
  * Added Web UI menu entry for advanced users (Closes #89)